SERVER-105099 correct `AbslHashValue` overloads (#36187)

GitOrigin-RevId: 97fca4cc70ebf4869fafa0b9671f3594fdea9647