src/mongo/db/query/interval_evaluation_tree.h
@@ -179,49 +179,6 @@ public:
     }
 };
 
-template <typename H>
-class IETHasher {
-public:
-    IETHasher(H hashState) : _hashState(std::move(hashState)) {}
-
-    H releaseHashState() {
-        return std::move(_hashState);
-    }
-
-    void transport(const ConstNode& node) {
-        combine(node, node.oil.toString(false));
-    }
-
-    void transport(const EvalNode& node) {
-        combine(node, node.matchType(), node.inputParamId());
-    }
-
-    void transport(const ExplodeNode& node, const IET&) {
-        auto cacheKey = node.cacheKey();
-        combine(node, node.index(), cacheKey.first, cacheKey.second);
-    }
-
-    template <typename N, typename... Ts>
-    void transport(const N& node, const Ts&... values) {
-        combine(node);
-    }
-
-private:
-    template <typename N, typename... Ts>
-    void combine(const N& node, const Ts&... values) {
-        _hashState = H::combine(std::move(_hashState), typeid(N).name(), values...);
-    }
-
-    H _hashState;
-};
-
-template <typename H>
-H AbslHashValue(H h, const IET& iet) {
-    IETHasher hasher(std::move(h));
-    algebra::transport<false>(iet, hasher);
-    return hasher.releaseHashState();
-}
-
 std::string ietToString(const IET& iet);
 std::string ietsToString(const IndexEntry& index, const std::vector<IET>& iets);
 
